Use ags v3 output build (#1040)

--- a/meson.build
+++ b/meson.build
@@ -24,7 +24,7 @@ custom_target(
     meson.project_source_root() / 'app.ts',
     '@OUTPUT@',
   ],
-  output: meson.project_name() + '.js',
+  output: 'hyprpanel-app',
   install: true,
   install_dir: datadir,
   build_always_stale: true,
